# n8n-wasm-testing

./: .gitignore  Cargo.toml  README.md  demo.wat  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
crates/neon-wasm-module/: Cargo.toml
crates/neon-wasm-module/src/: interface.rs  lib.rs
crates/wasi/: Cargo.toml
crates/wasi/src/: main.rs
nodes/WasmExecutor/: WasmExecutor.node.ts  addon.ts  load.cts  utils.ts
