[package]
name = "neon-wasm-module"
version = "0.1.0"
authors = ["Andreas Fitzek"]
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
neon = "1"
wasmtime = "35"
wasmtime-wasi = "35"
wasmtime-wasi-http = "35"
wasmtime-wasi-tls = "35"
